resources/public/css/style.css
/*reset*/
html, body, div, span, applet, object, iframe, h1, h2, h3, h4, h5, h6, p, blockquote, pre, a, abbr, acronym, address, big, cite, code,del, dfn, em, img, ins, kbd, q, small, strike, strong, sub, sup, tt, var, b, u, i, center,dl, dt, dd, ol, ul, li, fieldset, form, label, legend,table, caption, tbody, tfoot, thead, tr, th, td,article, aside, canvas, details, embed,figure, figcaption, footer, header, hgroup,menu, nav, output, ruby, section, summary,time, mark,audio, video {
    margin: 0;
    padding: 0;
    border: 0;
    font-size: 100%;
    font: inherit;
    vertical-align: baseline;
}
body {
    line-height: 1;
    font-family: Arial, sans-serif ;
}

ol,ul {
    
    padding: 0 0 4px 33px;
    font-size: 1em;
    margin-bottom: 10px;
    margin-left: 35px;
    line-height: 1.4;
    
}
blockquote, q {
    quotes: none;
}
blockquote:before, blockquote:after,
q:before, q:after {
    content: '';
    content: none;
}
table {
    border-collapse: collapse;
    border-spacing: 0;
}
p {
    font-size: 0.938em ;
    margin-bottom: 10px ;
    margin-left: 1em;
    line-height: 1.4 ;
}

h1, h2, h3, h4, h5 {
    font-weight: bold ;
    margin-left: 1em;
}
h1 {
    font-size: 1.750em  ;
    margin-bottom: 10px ;
    margin-top: 8px ;
    line-height: 1.2 ;
}
h2 { font-size: 1.375em; 	margin-bottom: 10px ; margin-top: 8px ; line-height: 1.2}
h3 { font-size: 1.125em ; 	margin-bottom: 6px ; margin-top: 8px ; line-height: 1.2}
h4 { font-size: 1.000em ; 	margin-bottom: 6px ; margin-top: 8px ; line-height: 1.2}
h5 { font-size: 0.813em ; 	margin-bottom: 6px ; margin-top: 8px ; line-height: 1.2}
strong {
    font-weight: bold ;
}
a {
    color: #369 ;
    text-decoration: none ;
}
a.see-more {
    color: #cc2a41;

}
a:hover {
    text-decoration: underline; 
}

.do-not-display {
    display: none;
}
html {
    max-width: 1024px;
    height: 100%;
    margin-left: auto;
    margin-right: auto;
}
body {
    width: 100%;
    height: 95%;
    margin: 0px;
    padding: 0px;
    background-position: top center;
    background-repeat: no-repeat;
    font-family: Verdana, Geneva, sans-serif;
    line-height: 130%;
    color: #252525;
    background-color: white;
    font-size: small;
    text-align: justify;
    
}

h2{
    color: #396538;
}

h3{
    color: #4C7875;
}

h4{
    color: #4C7875;
    font-style: italic;
    font-size: small;
}

.box {
    border: 1px #396538 solid;
    border-radius: 2px;
    border-style: solid;
}

#menu {
    position: relative;
    top: 2em;
    width: 600px;	
    float: left;
}
#banner a img {
    float: right;
}
.buttons ul { 
    list-style-type: none; 
    text-align: center;
}
.buttons ul li, .menu ul li { 
    display: inline;
}
#menu ul li a {
    padding: 0em 0.5em 0.1em 0;
}
#menu ul li a:link#current {
    text-decoration: underline;
}
#tabs ul {
    padding: 0;
    margin-left: 0;
}
#tabs .buttons ul li {
    display: table;
    float: left;
    vertical-align: middle;
    height: 3em;
    width: 120px;
    margin-left: 1px;
    border-right: 1px white solid;
}
#tabs .buttons ul li a {
y    padding: 0em 0.5em 0.1em 0;
    text-decoration: none;
    color: white;
    border: 0.1em #436756 solid;
    background-color: #436756;
    border-bottom-style: none;
    display: table-cell;
    height: 100%;
}
#tabs .buttons ul li a:hover,
#tabs .buttons ul li a:link#current,
#tabs .buttons ul li a:visited#current
{
    color: #436756;
    text-align: center;
    background-color: white;
}
#tabs {
    height: 2em;
    clear: both;
    width: 100%;
}
#blurb {
    float: right;
    height: 600px;
    overflow-x: hidden;
    overflow-y: auto;
    width: 600px;
    padding: 10px;
}
#mapsvg {
    clear: both;
}
#map {
    float: left;
    height: 600px;
    width: 350px;
    padding: 10px;
    margin: 10px;
}
#map img {
    max-height: 100%;
    max-width: 100%;
}
.col1b {
    height: 200px;
    width: 100%;
}
.colb2 {
    height: 200px;
    width: 100%;
}
#main {
    width:100%;
    margin-top: 0;
    height: 620px;
}
#footer , #info-header{
    height: 64px;
    text-align: right;
    margin-left: auto;
    margin-right: auto;
    background-color: rgba(39,65,38, 0.05);
    clear: both;
}
#info-header {
    display: inline-block;
    text-align: left;
    height: 160px;
}
#view-2 {
    height: 610px;
    float: left;
    margin-top: 10px;
}

#view-2-1 {
    width: 505px;
    height: 595px;
    float: left;
    background: #F2F2F2;
    margin-right: 10px;
}
#view-2-2 {
    width: 505px;
    height: 595px;
    float: left;
    float: right;
    background: #F2F2F2;
}
#view-2-map, #view-2-map object {
    width: 500px;
    height: 420px;
    text-align: center;
}
#view-2-map-tool{
    width: 500px;
    height: 60px;
    float: left;
    background: #aaaaaa;	
}
#view-2-2-chart {
    width: 450px;
    height: 400px;
    float: left;
}
#view-2-2-expl {
    width: 500px;
    height: 170px;
    float: left;
}
#view-3-text{
    width: 1010px;
    float: right;
    padding: 5px;
    margin-bottom: 5px;
    overflow: auto;
}
#content {
    min-height: 600px;
}
a.logout {
    float: right;
    clear: both;
    margin-top: 1em;
}
#view-3-text img{
    margin: 5px;
}

.text-pic-right{
    width: 200px;
    height: 600px;
    float: right;
    padding: 5px;
    position:relative;
    margin: 5px;
    margin-top: 20px;
}
.text-pic-right img{
    margin: 5px;
}

.text-pic-bottom{
    width: 790px;
    height: 150px;
    position: relative;
}

#text-box{
    padding: 5px;
    font-weight: bold;
    color: #4C7875;
}

#text-box-center{
	margin-top: 75px;
    padding: 10px;
    background-color: #BDD2B7;	
    margin-left: auto;
    margin-right: auto;
    max-width: 500px;
	border: 1px solid rgb(67, 103, 86);
	font-size: 1.05em;
}

#text-box-2{
    padding: 5px;
    
    background-color: #BDD2B7;
    clear:both;
}

#text-box-3{
    padding: 5px;
}

.resize{
    height: auto;
    width: auto;
}

.picture clear { 
    background-color: #F9F9F9;
    border: 1px solid #CCCCCC; padding: 5px;
    font: 11px/1.4em Arial, sans-serif;
    max-width: 680px;	
    float:clear;
}

.picture { 
    background-color: #F9F9F9;
    border: 1px solid #CCCCCC; padding: 5px;
    font: 11px/1.4em Arial, sans-serif;
    max-width: 340px;	
    margin-left:auto; 
    margin-right:auto;
}

.picture img { 
    border: 1px solid #CCCCCC;
    vertical-align:middle; margin-bottom: 3px; 
    max-width:330px; 
}


.right { 
    margin: 0.5em 0pt 0.5em 0.8em; float:right; clear:both; 
}

.left { 
    margin: 0.5em 0.8em 0.5em 0; float:left; 
}

.picture-large { 	
    background-color: #F9F9F9;
    border: 1px solid #CCCCCC; padding: 5px;
    font: 11px/1.4em Arial, sans-serif;
    max-width: 575px;
    margin-left: auto;
    margin-right:auto;
}

.picture-large img { 
    border: 1px solid #CCCCCC;
    vertical-align:middle; 
    margin-bottom: 3px; 
    max-width:565px;
}
#mapouter {
    text-align: center;
}
.picture-small { 
    background-color: #F9F9F9;
    border: 1px solid #CCCCCC; padding: 5px;
    font: 11px/1.4em Arial, sans-serif;
    max-width: 200px;	
}

.picture-small img { 
    border: 1px solid #CCCCCC;
    vertical-align:middle; margin-bottom: 3px; 
    max-width:190px;
}

.picture-extra-large {
    border: 1px solid #CCCCCC;
    vertical-align:middle; margin-bottom: 3px; 
    max-width:600px;
}

.picture-extra-large img { 
    border: 1px solid #CCCCCC;
    vertical-align:middle; margin-bottom: 3px; 
    max-width:580px;
}

.reference{
    vertical-align: super;
    color: blue;
    font-size: 75%;
}

.table{
    line-height: 175%;
}

.table, td{
	border: 1px solid black;
	padding: 5px;
	}

#maptools{
    border: 1px solid #666666;
    background: #aaaaaa;
    width: 100%;
    height: 40px;
    float: none;
}

.question li {
    list-style-type: none;
    clear: none;
}
.question ul {
    clear: none;
}
.question li:last-child {
    float: left;
    width: 40%;
}
.question {
    overflow: auto;
}
input.submit {
    left: 40%;
}

